--- a/regulamento.html
+++ b/regulamento.html
@@ -71,20 +71,20 @@
                     <a class="list-group-item">
                         <p class=" text-justify">
                             <b>1.</b> É terminantemente proibido falta, furar ou se atrasar no dia do campeonato após confirmar
-                            a presença. A data de realização sempre será escolhida atrás do consentimento de todos.
+                            a presença. A data de realização sempre será escolhida através do consentimento de todos.
                         </p>
                     </a>
                     <a class="list-group-item">
                         <p class="text-justify">
-                            <b>2.</b> O Campeonato terá de 2 a 3 Rounds onde todos os jogadores se enfretarão por ponto corridos
+                            <b>2.</b> O Campeonato terá de 2 a 3 Rounds onde todos os jogadores se enfretarão por pontos corridos
                             (3/1/0). Os times, rounds e partidas serão oficialmente divulgados e selecionados na véspera
                             do campeonato.
                         </p>
                     </a>
                     <a class="list-group-item">
                         <p class="text-justify">
-                            <b>3.</b> Os dois primeiros colocados ao final do último round, jogaram uma partida
-                            <b>FINAL</b> que consagrará o 1º Lugar e
+                            <b>3.</b> Os dois primeiros colocados ao final do último round, jogarão uma partida
+                            <b>FINAL</b> que consagrará o 1º Lugar e o
                             <b>CAMPEÃO</b> definitivo da Copa Shinobi.
                         </p>
                     </a>
