--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
     <title>Copa Shinobi de FIFA</title>
 </head>
@@ -60,29 +61,29 @@
             <div class="panel panel-primary panel-hover">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                    <b>Lista de Títulos</b>
+                    <b>Players</b>
                 </div>
                 <!-- List group -->
                 <ul class="list-group">
-                    <a href="#" class="list-group-item">Marcos Lourinho
+                    <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="1">Marcos Lourinho
                         <span class="pull-right">
                             <i class="fa fa-trophy"></i>
                             <i class="fa fa-trophy"></i>
                             <i class="fa fa-trophy"></i>
                         </span>
                     </a>
-                    <a href="#" class="list-group-item">Robson Andrade
+                    <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="2">Robson Andrade
                         <span class="pull-right">
                             <i class="fa fa-trophy"></i>
                         </span>
                     </a>
-                    <a href="#" class="list-group-item">Jairo Corrêa
+                    <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="3">Jairo Corrêa
                         <span class="pull-right">
                             <i class="fa fa-trophy"></i>
                         </span>
                     </a>
-                    <a href="#" class="list-group-item">Dalton Franco</a>
-                    <a href="#" class="list-group-item">Lucas Rodrigues</a>
+                    <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="4">Dalton Franco</a>
+                    <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="5">Lucas Rodrigues</a>
                 </ul>
             </div>
         </div>
@@ -139,12 +140,261 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="PlayerModal" tabindex="-1" role="dialog" aria-labelledby="PlayerModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #337ab7;">
+                    <h5 class="modal-title" style="color:white;">Estatísticas do Jogador</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="row-fluid">
+                        <div class="card hovercard">
+                            <div class="card-background">
+                                <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
+                            </div>
+                            <div class="useravatar">
+                                <img alt="" src="http://lorempixel.com/100/100/people/9/">
+                            </div>
+                            <div class="card-info">
+                                <span class="card-title" id="player"></span>
+
+                            </div>
+                        </div>
+                        <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab">
+                                    <span class="fa fa-2x fa-gamepad" aria-hidden="true"></span>
+                                    <div class="hidden-xs">Geral</div>
+                                </button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab">
+                                    <span class="fas fa-2x fa-futbol" aria-hidden="true"></span>
+                                    <div class="hidden-xs">Adversários</div>
+                                </button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab">
+                                    <span class="fa fa-2x fa-users" aria-hidden="true"></span>
+                                    <div class="hidden-xs">Melhores Times</div>
+                                </button>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="container-fluid">
+                            <div class="tab-content">
+                                <div class="tab-pane fade in active" id="tab1">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered  table-responsive">
+                                            <tbody>
+                                                <tr>
+                                                    <th scope="row">Partidas</th>
+                                                    <td>10</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">Vitórias</th>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">Empates</th>
+                                                    <td>3</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row">Derrotas</th>
+                                                    <td>2</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="tab-pane fade in active" id="tab1">
+                                            <table class="table table-striped table-hover table-bordered  table-responsive">
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">Gols Feitos</th>
+                                                        <td>10</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">Gols Sofridos</th>
+                                                        <td>5</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">Saldo de Gol</th>
+                                                        <td>5</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">Experience</th>
+                                                        <td>
+                                                            <b>1.203xp</b>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade in" id="tab2">
+                                    
+                                        <table class="table table-striped table-hover table-bordered  table-responsive">
+                                                <thead>
+                                                    <th>Adversários</th>
+                                                    <th class="text-center">J</th>
+                                                    <th class="text-center">V</th>
+                                                    <th class="text-center">E</th>
+                                                    <th class="text-center">D</th>
+                                                    <th class="text-center">Melhor Vitória</th>
+                                                    <th class="text-center">Pior Derrota</th>
+                                                </thead>
+                                                <tbody class="text-center">
+                                                    <tr>
+                                                        <td>Robson</td>
+                                                        <td>30</td>
+                                                        <td>10</td>
+                                                        <td>15</td>
+                                                        <td>5</td>
+                                                        <td>5 x 0</td>
+                                                        <td>5 x 0</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Jairo</td>
+                                                        <td>120</td>
+                                                        <td>100</td>
+                                                        <td>15</td>
+                                                        <td>5</td>
+                                                        <td>5 x 0</td>
+                                                        <td>5 x 0</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Dalton</td>
+                                                        <td>120</td>
+                                                        <td>100</td>
+                                                        <td>15</td>
+                                                        <td>5</td>
+                                                        <td>5 x 0</td>
+                                                        <td>5 x 0</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Lucas</td>
+                                                        <td>120</td>
+                                                        <td>100</td>
+                                                        <td>15</td>
+                                                        <td>5</td>
+                                                        <td>5 x 0</td>
+                                                        <td>5 x 0</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+
+                                </div>
+                                <div class="tab-pane fade in" id="tab3">
+                                    <table class="table table-striped table-hover table-bordered  table-responsive">
+                                        <thead>
+                                            <th>Melhores Times</th>
+                                            <th class="text-center" >Partidas</th>
+                                            <th class="text-center">Vitórias</th>
+                                            <th class="text-center">Empates</th>
+                                            <th class="text-center">Derrotas</th>
+                                        </thead>
+                                        <tbody class="text-center">
+                                            <tr>
+                                                <td>Manchester United</td>
+                                                <td>120</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>5</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Manchester United</td>
+                                                <td>120</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>5</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Manchester United</td>
+                                                <td>120</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>5</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Manchester United</td>
+                                                <td>120</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>5</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Manchester United</td>
+                                                <td>120</td>
+                                                <td>100</td>
+                                                <td>15</td>
+                                                <td>5</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer text-center">
         <p>© by: marcoslourinho.com</p>
     </footer>
     <script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/controller.js"></script>
 
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+            $('a[data-toggle=modal], button[data-toggle=modal]').click(function () {
+
+                var data_id = '';
+
+                if (typeof $(this).data('id') !== 'undefined') {
+                    data_id = $(this).data('id');
+
+                    // Controler de Id's:
+                    // Id = 1 -> Marcos;
+                    // Id = 2 -> Robson;
+                    // Id = 3 -> Jairo;
+                    // Id = 4 -> Dalton;
+                    // Id = 5 -> Lucas;
+                    if (data_id == 1) {
+                        document.getElementById("player").innerHTML = getMarcos();
+                    } else if (data_id == 2) {
+                        document.getElementById("player").innerHTML = getRobson();
+                    } else if (data_id == 3) {
+                        document.getElementById("player").innerHTML = getJairo();
+                    } else if (data_id == 4) {
+                        document.getElementById("player").innerHTML = getDalton();
+                    } else if (data_id == 5) {
+                        document.getElementById("player").innerHTML = getLucas();
+                    }
+
+                }
+            })
+        });
+
+
+
+        $(document).ready(function () {
+            $(".btn-pref .btn").click(function () {
+                $(".btn-pref .btn").removeClass("btn-primary").addClass("btn-default");
+                $(this).removeClass("btn-default").addClass("btn-primary");
+            });
+        });
+    </script>
 </body>
 
 </html>
