--- a/index.html
+++ b/index.html
@@ -235,105 +235,107 @@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade in" id="tab2">
-                                    
+                                    <div class="table-responsive">
                                         <table class="table table-striped table-hover table-bordered  table-responsive">
-                                                <thead>
-                                                    <th>Adversários</th>
-                                                    <th class="text-center">J</th>
-                                                    <th class="text-center">V</th>
-                                                    <th class="text-center">E</th>
-                                                    <th class="text-center">D</th>
-                                                    <th class="text-center">Melhor Vitória</th>
-                                                    <th class="text-center">Pior Derrota</th>
-                                                </thead>
-                                                <tbody class="text-center">
-                                                    <tr>
-                                                        <td>Robson</td>
-                                                        <td>30</td>
-                                                        <td>10</td>
-                                                        <td>15</td>
-                                                        <td>5</td>
-                                                        <td>5 x 0</td>
-                                                        <td>5 x 0</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Jairo</td>
-                                                        <td>120</td>
-                                                        <td>100</td>
-                                                        <td>15</td>
-                                                        <td>5</td>
-                                                        <td>5 x 0</td>
-                                                        <td>5 x 0</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Dalton</td>
-                                                        <td>120</td>
-                                                        <td>100</td>
-                                                        <td>15</td>
-                                                        <td>5</td>
-                                                        <td>5 x 0</td>
-                                                        <td>5 x 0</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Lucas</td>
-                                                        <td>120</td>
-                                                        <td>100</td>
-                                                        <td>15</td>
-                                                        <td>5</td>
-                                                        <td>5 x 0</td>
-                                                        <td>5 x 0</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-
+                                            <thead>
+                                                <th>Adversários</th>
+                                                <th class="text-center">J</th>
+                                                <th class="text-center">V</th>
+                                                <th class="text-center">E</th>
+                                                <th class="text-center">D</th>
+                                                <th class="text-center">Melhor Vitória</th>
+                                                <th class="text-center">Pior Derrota</th>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr>
+                                                    <td>Robson</td>
+                                                    <td>30</td>
+                                                    <td>10</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                    <td>5 x 0</td>
+                                                    <td>5 x 0</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Jairo</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                    <td>5 x 0</td>
+                                                    <td>5 x 0</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Dalton</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                    <td>5 x 0</td>
+                                                    <td>5 x 0</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Lucas</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                    <td>5 x 0</td>
+                                                    <td>5 x 0</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                                 <div class="tab-pane fade in" id="tab3">
-                                    <table class="table table-striped table-hover table-bordered  table-responsive">
-                                        <thead>
-                                            <th>Melhores Times</th>
-                                            <th class="text-center" >Partidas</th>
-                                            <th class="text-center">Vitórias</th>
-                                            <th class="text-center">Empates</th>
-                                            <th class="text-center">Derrotas</th>
-                                        </thead>
-                                        <tbody class="text-center">
-                                            <tr>
-                                                <td>Manchester United</td>
-                                                <td>120</td>
-                                                <td>100</td>
-                                                <td>15</td>
-                                                <td>5</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Manchester United</td>
-                                                <td>120</td>
-                                                <td>100</td>
-                                                <td>15</td>
-                                                <td>5</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Manchester United</td>
-                                                <td>120</td>
-                                                <td>100</td>
-                                                <td>15</td>
-                                                <td>5</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Manchester United</td>
-                                                <td>120</td>
-                                                <td>100</td>
-                                                <td>15</td>
-                                                <td>5</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Manchester United</td>
-                                                <td>120</td>
-                                                <td>100</td>
-                                                <td>15</td>
-                                                <td>5</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-hover table-bordered">
+                                            <thead>
+                                                <th>Melhores Times</th>
+                                                <th class="text-center">Partidas</th>
+                                                <th class="text-center">Vitórias</th>
+                                                <th class="text-center">Empates</th>
+                                                <th class="text-center">Derrotas</th>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr>
+                                                    <td>Manchester United</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Manchester United</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Manchester United</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Manchester United</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Manchester United</td>
+                                                    <td>120</td>
+                                                    <td>100</td>
+                                                    <td>15</td>
+                                                    <td>5</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -352,6 +354,7 @@
     <script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/datas.js"></script>
 
     <script type="text/javascript">
 
