--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
                             <i class="fa fa-trophy"></i>
                             <i class="fa fa-trophy"></i>
                             <i class="fa fa-trophy"></i>
+                            <i class="fa fa-trophy"></i>
                         </span>
                     </a>
                     <a href="#" class="list-group-item" data-toggle="modal" data-target="#PlayerModal" data-id="2">Robson Andrade
                         <span class="pull-right">
+                            <i class="fa fa-trophy"></i>
                             <i class="fa fa-trophy"></i>
                         </span>
                     </a>
